fonts and normalize

--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -5,5 +5,5 @@ $secondary-color: #FFF5F6;
 $first-text-color: #000000;
 $second-text-color: #907E82;
 
-$primary-font: "Titan One", sans-serif;
-$secondary-font: "DM Sans", coursive;
+$primary-font: "Titan One", cursive;
+$secondary-font: "DM Sans", sans-serif;
